--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_bg.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Нов ръчно актив списък (Automatic Trans
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Няма актив списъци. (Automatic Translation)
+view-content=View Content (Automatic Copy)
