--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_fr.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Nouvelle liste de manuel actif (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Il n'y a aucune liste d'atout. (Automatic Translation)
+view-content=View Content (Automatic Copy)
