--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_iw.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=רשימת נכסים ידנית חדשה (Automatic Trans
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=ישנם אין רשימות נכסים. (Automatic Translation)
+view-content=View Content (Automatic Copy)
