--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_vi.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Danh sách hướng dẫn sử dụng tài sản mới (Au
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Không có không có danh sách tài sản. (Automatic Translation)
+view-content=View Content (Automatic Copy)
