--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_CN.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=新建手动资产列表 (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=没有资产列表。 (Automatic Translation)
+view-content=View Content (Automatic Copy)
