--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_gl.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=New Manual Asset List (Automatic Copy)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=There are no asset lists. (Automatic Copy)
+view-content=View Content (Automatic Copy)
