--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_hi_IN.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=नई मैन्युअल एसेट सूची 
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=कोई संपत्ति सूचियां नहीं हैं । (Automatic Translation)
+view-content=View Content (Automatic Copy)
