--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ko.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=새로운 수동 자산 목록 (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=거기는 아무 자산 목록입니다. (Automatic Translation)
+view-content=View Content (Automatic Copy)
