--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_lt.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Naujas Rankinis turto sąrašas (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Šiuo metu nėra turto sąrašus. (Automatic Translation)
+view-content=View Content (Automatic Copy)
