--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pl.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Nowe listy aktywów ręczne (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Istnieją nie listy aktywów. (Automatic Translation)
+view-content=View Content (Automatic Copy)
