--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_pt_PT.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=New Manual Asset List (Automatic Copy)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Não há nenhuma lista de ativos. (Automatic Translation)
+view-content=View Content (Automatic Copy)
