--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_ru.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=Новый список ручной активов (Autom
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=Нет списков активов. (Automatic Translation)
+view-content=View Content (Automatic Copy)
