--- a/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/asset/asset-list-web/src/main/resources/content/Language_zh_TW.properties
@@ -17,3 +17,4 @@ new-manual-asset-list=新建手動資產清單 (Automatic Translation)
 only-one-rule-with-the-combination-x-is-supported=Only one rule with the combination {0} is supported. (Automatic Copy)
 ordering=Ordering (Automatic Copy)
 there-are-no-asset-lists=沒有資產清單。 (Automatic Translation)
+view-content=View Content (Automatic Copy)
