--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -3,6 +3,7 @@ background-image=Фоново изображение (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-leave-this-site=Искате ли да излезете от този сайт? Направени от вас промени не могат да бъдат записани. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Фиксирана ширина (Automatic Translation)
 fluid=Течност (Automatic Translation)
 map-background=Карта фон (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Избрания тип не актив (Automatic Transl
 not-translated=Не са преведени (Automatic Translation)
 padding-horizontal=Запълване H (Automatic Translation)
 padding-vertical=Подложка V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Записване на промени... (Automatic Translation)
 section=Раздел (Automatic Translation)
 section-builder=Раздел строител (Automatic Translation)
