--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -3,6 +3,7 @@ background-image=Imatge de fons (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenidor (Automatic Translation)
 do-you-want-to-leave-this-site=Voleu abandonar aquest lloc? Canvis que hàgiu fet no pot ser salvat. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Amplada fixa (Automatic Translation)
 fluid=Fluid (Automatic Translation)
 map-background=Mapa de fons (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Cap tipus d'actius seleccionats (Automatic Translation)
 not-translated=No traduït (Automatic Translation)
 padding-horizontal=Farciment H (Automatic Translation)
 padding-vertical=Farciment V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Si deseu els canvis... (Automatic Translation)
 section=Secció (Automatic Translation)
 section-builder=Secció constructor (Automatic Translation)
