--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_cs.properties
@@ -3,6 +3,7 @@ background-image=Obrázek na pozadí (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontejner (Automatic Translation)
 do-you-want-to-leave-this-site=Chcete opustit tento web? Provedené změny nebudou uloženy. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Pevná šířka (Automatic Translation)
 fluid=Kapalina (Automatic Translation)
 map-background=Pozadí s mapou (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Žádný typ majetku, který je vybrán (Automatic Transl
 not-translated=Není přeloženo (Automatic Translation)
 padding-horizontal=Odsazení obsahu H (Automatic Translation)
 padding-vertical=Odsazení V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Ukládání změn... (Automatic Translation)
 section=Sekce (Automatic Translation)
 section-builder=Sekce Tvůrce (Automatic Translation)
