--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_es.properties
@@ -3,6 +3,7 @@ background-image=Imagen de fondo (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Envase (Automatic Translation)
 do-you-want-to-leave-this-site=¿Desea salir de este sitio? No pueden guardarse los cambios realizados. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Ancho fijo (Automatic Translation)
 fluid=Líquido (Automatic Translation)
 map-background=Mapa de fondo (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Ningún tipo de activos seleccionado (Automatic Translati
 not-translated=No traducido (Automatic Translation)
 padding-horizontal=Relleno H (Automatic Translation)
 padding-vertical=Relleno V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Guardar los cambios... (Automatic Translation)
 section=Sección (Automatic Translation)
 section-builder=Sección Builder (Automatic Translation)
