--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -3,6 +3,7 @@ background-image=تصویر پس زمینه (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=ظرف (Automatic Translation)
 do-you-want-to-leave-this-site=آیا مایلید که این سایت را ترک تغییرات شما ذخیره شده ممکن است. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=پهنای ثابت (Automatic Translation)
 fluid=مایع (Automatic Translation)
 map-background=سابقه و هدف نقشه (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=هیچ نوع دارایی انتخاب (Automatic Transl
 not-translated=ترجمه نشده است (Automatic Translation)
 padding-horizontal=بالشتک H (Automatic Translation)
 padding-vertical=بالشتک V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=ذخیره تغییرات... (Automatic Translation)
 section=بخش (Automatic Translation)
 section-builder=بخش کشاورزی (Automatic Translation)
