--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fr.properties
@@ -3,6 +3,7 @@ background-image=Image de fond (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Conteneur (Automatic Translation)
 do-you-want-to-leave-this-site=Vous voulez quitter ce site ? Les modifications apportées ne peuvent pas être enregistrées. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Largeur fixe (Automatic Translation)
 fluid=Liquide (Automatic Translation)
 map-background=Fond de carte (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Aucun Type d'actifs sélectionné (Automatic Translation)
 not-translated=Non traduit (Automatic Translation)
 padding-horizontal=Rembourrage H (Automatic Translation)
 padding-vertical=Rembourrage V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Enregistrer les modifications... (Automatic Translation)
 section=Section (Automatic Translation)
 section-builder=Générateur de section (Automatic Translation)
