--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_in.properties
@@ -3,6 +3,7 @@ background-image=Gambar latar belakang (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontainer (Automatic Translation)
 do-you-want-to-leave-this-site=Apakah Anda ingin meninggalkan situs ini? Perubahan yang Anda buat tidak akan disimpan. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Tetap lebar (Automatic Translation)
 fluid=Cairan (Automatic Translation)
 map-background=Peta latar belakang (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Tidak ada tipe aset yang dipilih (Automatic Translation)
 not-translated=Tidak diterjemahkan (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Padding V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Menyimpan perubahan... (Automatic Translation)
 section=Bagian (Automatic Translation)
 section-builder=Bagian Builder (Automatic Translation)
