--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -3,6 +3,7 @@ background-image=Immagine di sfondo (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenitore (Automatic Translation)
 do-you-want-to-leave-this-site=Vuoi uscire da questo sito? Modifiche apportate non vengano salvate. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Larghezza fissa (Automatic Translation)
 fluid=Fluido (Automatic Translation)
 map-background=Sfondo di mappa (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nessun tipo di Asset selezionato (Automatic Translation)
 not-translated=Non tradotto (Automatic Translation)
 padding-horizontal=Imbottitura H (Automatic Translation)
 padding-vertical=Imbottitura V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvare le modifiche... (Automatic Translation)
 section=Sezione (Automatic Translation)
 section-builder=Sezione Generatore (Automatic Translation)
