--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -3,6 +3,7 @@ background-image=תמונת רקע (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=מיכל (Automatic Translation)
 do-you-want-to-leave-this-site=האם ברצונך להשאיר את האתר הזה? השינויים שביצעת עשויים לא יישמרו. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=רוחב קבוע (Automatic Translation)
 fluid=נוזל (Automatic Translation)
 map-background=מפת רקע (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=נבחר את סוג הנכס אין (Automatic Translati
 not-translated=לא לתרגם (Automatic Translation)
 padding-horizontal=ריפוד H (Automatic Translation)
 padding-vertical=ריפוד V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=שמירת שינויים... (Automatic Translation)
 section=סעיף (Automatic Translation)
 section-builder=סעיף בונה (Automatic Translation)
