--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -3,6 +3,7 @@ background-image=Fono paveikslėlis (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteineris (Automatic Translation)
 do-you-want-to-leave-this-site=Ar norite palikti šią svetainę? Keitimų įrašyti negalima. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Fiksuoto pločio (Automatic Translation)
 fluid=Skystis (Automatic Translation)
 map-background=Žemėlapio fone (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nepasirinktas turto tipas (Automatic Translation)
 not-translated=Vertimas (Automatic Translation)
 padding-horizontal=Užpildymas H (Automatic Translation)
 padding-vertical=Apdaila V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
 section=Skyriuje (Automatic Translation)
 section-builder=Skyriuje statybininkas (Automatic Translation)
