--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -3,6 +3,7 @@ background-image=Imagem de fundo (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contêiner (Automatic Translation)
 do-you-want-to-leave-this-site=Você quer deixar este site? As alterações feitas não poderão ser salvas. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Largura fixa (Automatic Translation)
 fluid=Fluido (Automatic Translation)
 map-background=Fundo do mapa (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nenhum tipo de ativo selecionado (Automatic Translation)
 not-translated=Não traduzidas (Automatic Translation)
 padding-horizontal=Preenchimento de H (Automatic Translation)
 padding-vertical=Preenchimento V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvar as alterações... (Automatic Translation)
 section=Seção (Automatic Translation)
 section-builder=Construtor de seção (Automatic Translation)
