--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -3,6 +3,7 @@ background-image=Фоновое изображение (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-leave-this-site=Вы хотите оставить этот сайт? Сделанные изменения не могут быть сохранены. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Фиксированная ширина (Automatic Translation)
 fluid=Жидкость (Automatic Translation)
 map-background=Справочная карта (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Не выбран тип актива (Automatic Translat
 not-translated=Не переведено (Automatic Translation)
 padding-horizontal=Заполнение H (Automatic Translation)
 padding-vertical=Заполнение V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Сохранение изменений... (Automatic Translation)
 section=Раздел (Automatic Translation)
 section-builder=Раздел строитель (Automatic Translation)
