--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sk.properties
@@ -3,6 +3,7 @@ background-image=Obrázok na pozadí (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontajner (Automatic Translation)
 do-you-want-to-leave-this-site=Chcete opustiť túto stránku? Vykonané zmeny sa neuložia. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Pevná šírka (Automatic Translation)
 fluid=Tekutiny (Automatic Translation)
 map-background=Mapa pozadia (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Vybratý typ žiadny majetok (Automatic Translation)
 not-translated=Nie sú preložené (Automatic Translation)
 padding-horizontal=Polstrovanie H (Automatic Translation)
 padding-vertical=Čalúnenie V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Uloženie zmien... (Automatic Translation)
 section=Sekcia (Automatic Translation)
 section-builder=Sekcia Builder (Automatic Translation)
