--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -3,6 +3,7 @@ background-image=Arka plan resmi (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteyner (Automatic Translation)
 do-you-want-to-leave-this-site=Bu siteyi terk istiyor musunuz? Yaptığınız değişiklikler kaydedilmemiş olabilir. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Sabit genişliği (Automatic Translation)
 fluid=Sıvı (Automatic Translation)
 map-background=Harita arka plan (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Seçili hiçbir kıymet türü (Automatic Translation)
 not-translated=Tercüme değil (Automatic Translation)
 padding-horizontal=Doldurma H (Automatic Translation)
 padding-vertical=Doldurma V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
 section=Bölüm (Automatic Translation)
 section-builder=Bölüm Oluşturucu (Automatic Translation)
