--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_uk.properties
@@ -3,6 +3,7 @@ background-image=Фонове зображення (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
 do-you-want-to-leave-this-site=Ви хочете, щоб залишити цей сайт? Внесені зміни можуть не зберегтися. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Фіксована ширина (Automatic Translation)
 fluid=Рідина (Automatic Translation)
 map-background=Карта фону (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Не вибраний тип активу (Automatic Tran
 not-translated=Не перевівши (Automatic Translation)
 padding-horizontal=Заповнення H (Automatic Translation)
 padding-vertical=Оббивка V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Збереження змін... (Automatic Translation)
 section=Розділ (Automatic Translation)
 section-builder=Розділ будівельника (Automatic Translation)
