--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_TW.properties
@@ -3,6 +3,7 @@ background-image=背景圖片 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=容器 (Automatic Translation)
 do-you-want-to-leave-this-site=你想離開這個網站嗎？您所做的更改可能不會保存。 (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=固定寬度 (Automatic Translation)
 fluid=流體 (Automatic Translation)
 map-background=地圖背景 (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=未選擇任何資產類型 (Automatic Translation)
 not-translated=未翻譯 (Automatic Translation)
 padding-horizontal=填充 h (Automatic Translation)
 padding-vertical=填充 v (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=正在保存更改..。 (Automatic Translation)
 section=部分 (Automatic Translation)
 section-builder=節產生器 (Automatic Translation)
