--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -3,6 +3,7 @@ background-image=صورة خلفية (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=حاوية (Automatic Translation)
 do-you-want-to-leave-this-site=هل تريد ترك هذا الموقع؟ قد لا يتم حفظ التغييرات التي أجريتها. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=عرض ثابت (Automatic Translation)
 fluid=سائل (Automatic Translation)
 map-background=تعيين خلفية (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=لا يوجد نوع الأصول المحددة (Automat
 not-translated=لم تترجم (Automatic Translation)
 padding-horizontal=الحشو ح (Automatic Translation)
 padding-vertical=الحشو الخامس (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=حفظ التغييرات... (Automatic Translation)
 section=قسم (Automatic Translation)
 section-builder=قسم منشئ (Automatic Translation)
