--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_el.properties
@@ -3,6 +3,7 @@ background-image=Εικόνα φόντου (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Κοντέινερ (Automatic Translation)
 do-you-want-to-leave-this-site=Θέλετε να εγκαταλείψετε αυτήν την τοποθεσία; Αλλαγές που έχετε κάνει ενδέχεται να μην αποθηκευτούν. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Σταθερό πλάτος (Automatic Translation)
 fluid=Υγρό (Automatic Translation)
 map-background=Φόντο του χάρτη (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Καμία επιλογή τύπου περιουσιακ
 not-translated=Δεν μεταφράζονται (Automatic Translation)
 padding-horizontal=Αναπλήρωση H (Automatic Translation)
 padding-vertical=Αναπλήρωση V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Αποθήκευση των αλλαγών... (Automatic Translation)
 section=Ενότητα (Automatic Translation)
 section-builder=Ενότητα οικοδόμος (Automatic Translation)
