--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_et.properties
@@ -3,6 +3,7 @@ background-image=Taustapilt (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteiner (Automatic Translation)
 do-you-want-to-leave-this-site=Kas soovite selle saidi lahkuda? Tehtud muudatusi ei salvestata. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Kindla laiusega (Automatic Translation)
 fluid=Vedeliku (Automatic Translation)
 map-background=Kaart taust (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Vara tüüpi pole valitud (Automatic Translation)
 not-translated=Tõlgitud (Automatic Translation)
 padding-horizontal=Polstri H (Automatic Translation)
 padding-vertical=Polstri V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Muudatused... (Automatic Translation)
 section=Lõik (Automatic Translation)
 section-builder=Lõik ehitaja (Automatic Translation)
