--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_gl.properties
@@ -3,6 +3,7 @@ background-image=Background Image (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Copy)
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved. (Automatic Copy)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Fixed Width (Automatic Copy)
 fluid=Fluid (Automatic Copy)
 map-background=Map Background (Automatic Copy)
@@ -13,6 +14,7 @@ no-asset-type-selected=No Asset Type Selected (Automatic Copy)
 not-translated=Not translated (Automatic Copy)
 padding-horizontal=Padding H (Automatic Copy)
 padding-vertical=Padding V (Automatic Copy)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Saving changes... (Automatic Copy)
 section=Section (Automatic Copy)
 section-builder=Section Builder (Automatic Copy)
