--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -3,6 +3,7 @@ background-image=Háttérkép (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konténer (Automatic Translation)
 do-you-want-to-leave-this-site=Szeretné, hogy hagyja ezt a webhelyet? Végrehajtott módosítások nem menthetők. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Rögzített szélességű (Automatic Translation)
 fluid=Folyadék (Automatic Translation)
 map-background=Háttér megjelenítése (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nincs kijelölt eszköz típusa (Automatic Translation)
 not-translated=Nem lefordított (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Tömítéseket V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Módosítások mentése... (Automatic Translation)
 section=Szakasz (Automatic Translation)
 section-builder=Szakasz Builder (Automatic Translation)
