--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -3,6 +3,7 @@ background-image=Bakgrunnsbilde (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Beholder (Automatic Translation)
 do-you-want-to-leave-this-site=Vil du forlate denne siden? Endringene kan ikke lagres. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Fast bredde (Automatic Translation)
 fluid=Væske (Automatic Translation)
 map-background=Kart bakgrunn (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Ingen Gjenstandstype valgt (Automatic Translation)
 not-translated=Ikke oversatt (Automatic Translation)
 padding-horizontal=Utfylling H (Automatic Translation)
 padding-vertical=Utfylling V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Lagrer endringer... (Automatic Translation)
 section=Delen (Automatic Translation)
 section-builder=Delen Builder (Automatic Translation)
