--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -3,6 +3,7 @@ background-image=Obraz tła (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontener (Automatic Translation)
 do-you-want-to-leave-this-site=Czy chcesz opuścić Tę stronę? Wprowadzone zmiany nie mogą zostać zapisane. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Stała szerokość (Automatic Translation)
 fluid=Płyn (Automatic Translation)
 map-background=Tło mapy (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nie ma wybranego typu Asset (Automatic Translation)
 not-translated=Nie przetłumaczone (Automatic Translation)
 padding-horizontal=Dopełnienie H (Automatic Translation)
 padding-vertical=Dopełnienie V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
 section=Sekcja (Automatic Translation)
 section-builder=Sekcja Builder (Automatic Translation)
