--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -3,6 +3,7 @@ background-image=Imagine de fundal (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Translation)
 do-you-want-to-leave-this-site=Vrei să părăsească acest site? Modificările efectuate nu poate fi salvat. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Lăţime fixă (Automatic Translation)
 fluid=Lichid (Automatic Translation)
 map-background=Hartă fundal (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Nici un tip de active selectate (Automatic Translation)
 not-translated=Nu tradus (Automatic Translation)
 padding-horizontal=Umplutură H (Automatic Translation)
 padding-vertical=Umplutură V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Salvarea modificărilor... (Automatic Translation)
 section=Secţiunea (Automatic Translation)
 section-builder=Secţiunea Builder (Automatic Translation)
