--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -3,6 +3,7 @@ background-image=Sliko za ozadje (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Posodo (Automatic Translation)
 do-you-want-to-leave-this-site=Ali želite zapustiti to stran? Spremembe morda ne bodo shranjene. (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=Nespremenljiva širina (Automatic Translation)
 fluid=Tekočine (Automatic Translation)
 map-background=Zemljevid ozadje (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=Brez sredstev za vrsto izbrane (Automatic Translation)
 not-translated=Prevedeno (Automatic Translation)
 padding-horizontal=Oblazinjenje H (Automatic Translation)
 padding-vertical=Oblazinjenje V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=Zimski... (Automatic Translation)
 section=Oddelek (Automatic Translation)
 section-builder=Oddelek Builder (Automatic Translation)
