--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -3,6 +3,7 @@ background-image=ภาพพื้นหลัง (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=คอนเทนเนอร์ (Automatic Translation)
 do-you-want-to-leave-this-site=คุณต้องออกจากไซต์นี้ ไม่สามารถบันทึกการเปลี่ยนแปลงที่คุณทำ (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=ความกว้างคงที่ (Automatic Translation)
 fluid=ของเหลว (Automatic Translation)
 map-background=พื้นหลังแผนที่ (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=ชนิดไม่มีสินทรัพย์ท
 not-translated=ไม่แปล (Automatic Translation)
 padding-horizontal=ระยะห่าง H (Automatic Translation)
 padding-vertical=ขยาย V (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=บันทึกการเปลี่ยนแปลง... (Automatic Translation)
 section=ส่วน (Automatic Translation)
 section-builder=สร้างส่วน (Automatic Translation)
