--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_zh_CN.properties
@@ -3,6 +3,7 @@ background-image=背景图片 (Automatic Translation)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=容器 (Automatic Translation)
 do-you-want-to-leave-this-site=你想离开这个网站吗？您所做的更改可能不会保存。 (Automatic Translation)
+draft-saved-at-x=Draft saved at {0}. (Automatic Copy)
 fixed-width=固定宽度 (Automatic Translation)
 fluid=流体 (Automatic Translation)
 map-background=地图背景 (Automatic Translation)
@@ -13,6 +14,7 @@ no-asset-type-selected=未选择任何资产类型 (Automatic Translation)
 not-translated=未翻译 (Automatic Translation)
 padding-horizontal=填充 h (Automatic Translation)
 padding-vertical=填充 v (Automatic Translation)
+publish-page=Publish Page (Automatic Copy)
 saving-changes=正在保存更改..。 (Automatic Translation)
 section=部分 (Automatic Translation)
 section-builder=节生成器 (Automatic Translation)
