--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Audiència (Automatic Translation)
 background-color=Color de fons (Automatic Translation)
 background-image=Imatge de fons (Automatic Translation)
