--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=مخاطبان (Automatic Translation)
 background-color=رنگ پس زمینه (Automatic Translation)
 background-image=تصویر پس زمینه (Automatic Translation)
