--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Közönség (Automatic Translation)
 background-color=Háttérszín (Automatic Translation)
 background-image=Háttérkép (Automatic Translation)
