--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Publikum (Automatic Translation)
 background-color=Bakgrunnsfarge (Automatic Translation)
 background-image=Bakgrunnsbilde (Automatic Translation)
