--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_sl.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Občinstvo (Automatic Translation)
 background-color=Barva ozadja (Automatic Translation)
 background-image=Sliko za ozadje (Automatic Translation)
