--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_bg.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Аудитория (Automatic Translation)
 background-color=Цвят на фона (Automatic Translation)
 background-image=Фоново изображение (Automatic Translation)
