--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hi_IN.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=दर्शकों (Automatic Translation)
 background-color=पृष्ठभूमि रंग (Automatic Translation)
 background-image=पृष्ठभूमि छवि (Automatic Translation)
