--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=הקהל (Automatic Translation)
 background-color=צבע רקע (Automatic Translation)
 background-image=תמונת רקע (Automatic Translation)
