--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nl.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Audience (Automatic Copy)
 background-color=Background Color (Automatic Copy)
 background-image=Background Image (Automatic Copy)
