--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Publiczność (Automatic Translation)
 background-color=Kolor tła (Automatic Translation)
 background-image=Obraz tła (Automatic Translation)
