--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ro.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Publicul (Automatic Translation)
 background-color=Culoarea de fundal (Automatic Translation)
 background-image=Imagine de fundal (Automatic Translation)
