--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_vi.properties
@@ -1,3 +1,4 @@
+are-you-sure-you-want-to-discard-current-draft-and-apply-latest-published-changes=Are you sure you want to discard current draft and apply latest published changes? (Automatic Copy)
 audience=Khán giả (Automatic Translation)
 background-color=Màu nền (Automatic Translation)
 background-image=Hình nền (Automatic Translation)
